# segelflug-classifieds

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  deploy.sh  renovate.json  repository.yaml
.github/workflows/: build-and-deploy.yml  ci.yml
home-assistant-addon/: Dockerfile  config.yaml  run.sh
src/: app.rs  classifieds.rs  descriptions.rs  guids.rs  main.rs  price.rs  telegram.rs
src/classifieds/: api.rs  mod.rs  parse.rs  rss.rs  utils.rs
src/classifieds/parse/: item.rs  mod.rs  user.rs
src/classifieds/parse/snapshots/: segelflug_classifieds__classifieds__parse__item__tests__parse_test@basic.html.snap  segelflug_classifieds__classifieds__parse__item__tests__parse_test@dj-classifieds-2.html.snap  segelflug_classifieds__classifieds__parse__item__tests__parse_test@dj-classifieds.html.snap  segelflug_classifieds__classifieds__parse__item__tests__parse_test@no-photo.html.snap  segelflug_classifieds__classifieds__parse__user__tests__parse_test.snap  segelflug_classifieds__classifieds__parse__user__tests__parse_test@basic.html.snap  segelflug_classifieds__classifieds__parse__user__tests__parse_test@dj-classifieds-2.html.snap  segelflug_classifieds__classifieds__parse__user__tests__parse_test@dj-classifieds.html.snap
src/classifieds/parse/test-input/item/: basic.html  dj-classifieds-2.html  dj-classifieds.html  no-photo.html
src/classifieds/parse/test-input/user/: basic.html  dj-classifieds-2.html  dj-classifieds.html
src/classifieds/snapshots/: segelflug_classifieds__classifieds__rss__tests__parse_test@basic.rss.snap  segelflug_classifieds__classifieds__rss__tests__parse_test@basic.xml.snap  segelflug_classifieds__classifieds__rss__tests__parse_test@broken-script.xml.snap  segelflug_classifieds__classifieds__rss__tests__parse_test@dj-classifieds.xml.snap  segelflug_classifieds__classifieds__rss__tests__parse_test@umlaut-crash.xml.snap
src/classifieds/test-input/: basic.xml  broken-script.xml  dj-classifieds.xml  umlaut-crash.xml
systemd/: segelflug-classifieds-bot.service
