[package]
name = "segelflug-classifieds"
version = "0.0.0"
authors = ["Tobias Bieniek <tobias@bieniek.cloud>"]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "=3.3.0"
anyhow = "=1.0.86"
atomicwrites = "=0.4.3"
clap = { version = "=4.4.18", features = ["derive", "env", "wrap_help"] }
lazy_static = "=1.4.0"
rand = "=0.8.5"
regex = "=1.10.5"
reqwest = { version = "=0.11.27", default-features = false, features = ["rustls-tls"] }
rss = { version = "=2.0.7", default-features = false }
scraper = { version = "=0.17.1", default-features = false, features = ["errors"] }
sentry = { version = "=0.31.8", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
serde = "=1.0.203"
serde_json = "=1.0.114"
serde_urlencoded = "=0.7.1"
teloxide = { version = "=0.12.2", default-features = false, features = ["rustls"] }
tokio = { version = "=1.36.0", features = ["full"] }
tracing = "=0.1.40"
tracing-futures = "=0.2.5"
tracing-subscriber = "=0.3.18"

[dev-dependencies]
insta = { version = "=1.36.1", features = ["glob"] }

[build-dependencies]
vergen = { version = "=8.3.1", features = ["git", "gitcl"] }
