[package]
name = "segelflug-classifieds"
version = "0.0.0"
authors = ["Tobias Bieniek <tobias@bieniek.cloud>"]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "=4.0.0"
anyhow = "=1.0.93"
atomicwrites = "=0.4.4"
clap = { version = "=4.5.21", features = ["derive", "env", "wrap_help"] }
lazy_static = "=1.5.0"
rand = "=0.8.5"
regex = "=1.11.1"
reqwest = { version = "=0.11.27", default-features = false, features = ["rustls-tls"] }
rss = { version = "=2.0.11", default-features = false }
scraper = { version = "=0.21.0", default-features = false, features = ["errors"] }
sentry = { version = "=0.34.0", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
serde = "=1.0.215"
serde_json = "=1.0.133"
serde_urlencoded = "=0.7.1"
teloxide = { version = "=0.13.0", default-features = false, features = ["rustls"] }
tokio = { version = "=1.42.0", features = ["full"] }
tracing = "=0.1.41"
tracing-futures = "=0.2.5"
tracing-subscriber = "=0.3.19"

[dev-dependencies]
insta = { version = "=1.41.1", features = ["glob"] }

[build-dependencies]
anyhow = "=1.0.93"
vergen-gitcl = "=1.0.2"
