[package]
name = "segelflug-classifieds"
version = "0.0.0"
authors = ["Tobias Bieniek <tobias@bieniek.cloud>"]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "=4.1.2"
anyhow = "=1.0.100"
atomicwrites = "=0.4.4"
clap = { version = "=4.5.56", features = ["derive", "env", "wrap_help"] }
lazy_static = "=1.5.0"
rand = "=0.9.2"
regex = "=1.12.2"
reqwest = { version = "=0.12.23", default-features = false, features = ["rustls-tls"] }
rss = { version = "=2.0.12", default-features = false }
scraper = { version = "=0.24.0", default-features = false, features = ["errors"] }
sentry = { version = "=0.42.0", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
serde = "=1.0.228"
serde_json = "=1.0.149"
serde_urlencoded = "=0.7.1"
teloxide = { version = "=0.17.0", default-features = false, features = ["rustls"] }
tokio = { version = "=1.48.0", features = ["full"] }
tracing = "=0.1.44"
tracing-futures = "=0.2.5"
tracing-subscriber = "=0.3.22"

[dev-dependencies]
insta = { version = "=1.46.3", features = ["glob"] }

[build-dependencies]
anyhow = "=1.0.100"
vergen-gitcl = "=1.0.8"
